--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,25 @@
 # Site settings
 title: LS Blog
 SEOTitle: 松松的博客 | LS Blog
+header-img:
+email: lisongqu@126.com
 description: "大音希声，大象无形"
+keyword: ""
+url: "https://qulisong.github.com"
+baseurl: ""
+
+
+# Sidebar settings
+sidebar: true
+sidebar-about-description: ""
+sidebar-avatar: 
+
+# SNS settings
+#RSS: false
+#webo_username: 
+#zhibu_username: 
+#github_username: 
+#facebook_username:
+#jianshu_username: 
+
 theme: jekyll-theme-cayman
