--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: LS Blog
-SEOTitle: BY Blog
+SEOTitle: LS Blog
 header-img: img/post-bg-desk.jpg
 email: lisongqu@126.com
 description: "Never give up, never lose hope."
