--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: LS Blog
 header-img: img/post-bg-desk.jpg
 email: lisongqu@126.com
 description: "Never give up, never lose hope."
-keyword: "LS, LS Blog, lisongqu, iOS, Apple, iPhone"
+keyword: "LS, LS Blog, lisongqu, Java, Python"
 url: "http://qulisong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qulisong/qulisong.github.io.git" # you code repository
